--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -18,6 +18,7 @@ body {
   linear-gradient(45deg, black 33%, transparent 25%);	
   background-size: 2em 2em;
   background-color: #232323;
+  overflow-y: hidden;
 
 }
 
@@ -49,8 +50,8 @@ img{
 }
 
 .course_img {
-    width: 52%;
-    min-width: 170px;
+    width: 15.5rem;
+    min-width: 200px;
     margin-right: 1rem;
   }
 
@@ -59,6 +60,11 @@ img{
     margin-left: 0.3rem;
   }
 
+  .promo_warning{
+    display: none;
+    color: red;
+    font-style: italic;
+  }
 
 .center-wrapper {
   padding: 0.5rem;
@@ -73,7 +79,6 @@ img{
   max-width: 580px;
   border: 2px solid black;
   background: white;
-  height: 510px;
   margin-top: 75px;
 }
 
@@ -173,6 +178,7 @@ button {
 .promo-code {
   display: flex;
   justify-content: space-between;
+  margin-top: 1.5rem;
 }
 
 input[type=checkbox]{
@@ -203,7 +209,6 @@ input[type=text] {
   color: white;
   margin-top: 2rem;
   transition: ease-in-out;
-  
 }
 
 .checkbtn:hover{
@@ -211,8 +216,32 @@ input[type=text] {
     scale: 1.01;
 }
 
+.pop_container{
+  
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.popover1{
+  padding: .9rem 0;
+  width: 15%;
+  height: 3rem;
+  background: #9966cc;
+  font-size: 1rem;
+  color: white;
+  margin: 30px auto;
+  border-radius: 10px;
+  font-family: "Lato", sans-serif;
+  display: block;
+  position: absolute;
+  top: 500px;
+  transition: 0.3s ease-out;
+}
+
 .hlp{
     font-size: 0.78rem;
+    text-decoration: none;
 
 }
 
@@ -221,22 +250,3 @@ input[type=text] {
     cursor: pointer;
 }
 
-.tooltip {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .tooltip .tooltiptext {
-    visibility: hidden;
-    background-color: white;
-    color: black;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
-    position: absolute;
-    z-index: 1;
-  }
-  
- .tooltip:tar .tooltiptext {
-    visibility: visible;
-  }
