--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -13,9 +13,10 @@
   <title>Contact Us</title>
 
 </head>
-
+<%- include('header'); -%>
+<div class="wholepage">
 <body class="body-container-wrapper body-container">
-  <%- include('header'); -%>
+   
     <div class="section">
       <div class="container-fluid">
         <div class="mainformcont">
@@ -115,6 +116,7 @@
     </div>
     </div>
     </div>
+  </div>
     <%- include('footer'); -%>
 
 
