--- a/views/header.ejs
+++ b/views/header.ejs
@@ -34,7 +34,7 @@
                 <p class="preheader-text">Master your music skills with the best music lessons!</p>
             </div>
         </div>
-
+        <div class="specific">
         <header>
             <nav class="navbar">
                 <ul>
@@ -52,7 +52,7 @@
                 </ul>
             </nav>
         </header>
-        
+    </div>
         
         <script src="" async defer></script>
     </body>
