--- a/public/css/header.css
+++ b/public/css/header.css
@@ -24,21 +24,21 @@
     transform: scale(1.05);
 }
 
-header{
+.specific header{
     background-color: black;
 }
 
-.navbar {
+.specific .navbar {
     color: rgba(0, 0, 35, 0.84);
 
 }
 
-.navbar ul {
+.spefic .navbar ul {
     overflow: auto;
 
 }
 
-.navbar li {
+.specific .navbar li {
     margin: 15px 20px;
     float: right;
     list-style: none;
@@ -53,7 +53,7 @@ header{
 }
 
 
-.navbar li a {
+.specific .navbar li a {
     font-size: 15px;
     color: rgba(211, 211, 214, 0.856);
     padding: 5px 5px;
@@ -63,7 +63,7 @@ header{
     cursor: pointer;
 }
 
-.navbar li a:hover {
+.specific .navbar li a:hover {
     color: rgba(118, 211, 232, 0.864);
     font-size: 16px;
     /* background-color: rgba(0, 0, 0, 0.471); */
