--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -8,9 +8,10 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
+    <div class="body_replacement">
   <div>
     <footer class="footer">
-        <div class="container">
+        <div class="container3">
             <div class="row">
                 <div class="footer-col">
                     <h4>company</h4>
@@ -53,7 +54,7 @@
         </div>
    </footer>
 </div>
-  
+</div>
 
 </body>
 </html>
