--- a/views/wishlist.ejs
+++ b/views/wishlist.ejs
@@ -7,34 +7,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel = "stylesheet" href = "css/wishlist.css">
     <script src = "js/script.js"></script>
+ 
     <title>Wishlist</title>
 </head>
-<body>
-
-  <!-- <%- include('header'); -%> -->
-    <div class="outer">
+<body style="background-color: #0f0707;">
+  <%- include('header'); -%>
+ <div class="bodyMain">
+    <div class="outer3">
     <div>
         <div class="maincontainer">
-            <div class="wishmain d-flex container">
+            <div class="wishmain d-flex ">
                 <div class="d-none d-xl-block">
                     <div class="">
                         <div class="card" style="width: 18rem; background-color: #181a1b;">
                             <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAASwAAACoCAMAAABt9SM9AAAAA1BMVEUAlv+tY//LAAAAR0lEQVR4nO3BAQEAAACCIP+vbkhAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAO8GxYgAAb0jQ/cAAAAASUVORK5CYII=" class="card-img-top" alt="...">
-                            <div class="card-body" style="border-bottom: 2px solid grey; padding-bottom: 2rem" >
+                            <div class="card-body" style="border-bottom: 2px solid grey; padding-bottom: 1.5rem" >
                               
                               <div class="userpic_con">  
                               <div class="userpic">
                                     
                                 </div></div>
-                              <h5 class="proftitle align-items-end" >Welcome, Username.</h5>
+                                <
+                              <h5 class="proftitle2 align-items-end" >Welcome, <%=user.fullname.split(' ')[0]%></h5>
                             </div>
-                            <ul class="list-group list-group-flush">
-                              <li class="list-group-item atb" style="border-bottom: 2px solid grey;">Your Profile</li>
-                              <li class="list-group-item atb" style="border-bottom: 2px solid grey;">Wishlist</li>
-                              <li class="list-group-item atb" style="border-bottom: 2px solid grey;">Your Courses</li>
-                              <li class="list-group-item atb" style="border-bottom: 2px solid grey;">Home</li>
+                            <ul class="list-group list-group-flush" style="font-size: 16px;">
+                              <li class="list-group-item atb" style=" border-bottom: 2px solid grey; background-color: #181a1b;">Your Profile</li>
+                              <li class="list-group-item atb" style="border-bottom: 2px solid grey;  background-color: #181a1b;">Wishlist</li>
+                              <li class="list-group-item atb" style="border-bottom: 2px solid grey;  background-color: #181a1b;">Your Courses</li>
+                              <li class="list-group-item atb" style="border-bottom: 2px solid grey;  background-color: #181a1b;">Home</li>
                               
-                              <li class="list-group-item atb" style="border-bottom: 2px solid grey;">Log Out</li>
+                              <li class="atb list-group-item" style="border-bottom: 2px solid grey;  background-color: #181a1b;">Log Out</li>
                             </ul>
 
                             
@@ -49,7 +51,7 @@
                     <div class="rightcont">
                         <div class="rightmain d-flex flex-column">
                             <div class="rhead">
-                               <div class=""> Your Wishlist (3)</div>
+                               <div class=""> Your Wishlist (<%=user.wishlist.length %>)</div>
                             </div>
 
                             <div class="wishblock">
@@ -61,7 +63,7 @@
                                 </div>
 
                                 <div class="wishitemleft d-flex flex-column">
-                                  <div class="title">
+                                  <div class="title2">
                                     <a>Learn Guitar In 30 Days by Musician XYZ </a>
                                   </div>
 
@@ -71,11 +73,11 @@
 
                                   <div class="rating">
                                     <div class="rate pt-1">
-                                        <label for="star5" title="text">5 stars</label>
-                                        <label for="star4" title="text">4 stars</label>
-                                        <label for="star3" title="text">3 stars</label>
-                                        <label for="star2" title="text">2 stars</label>
-                                        <label for="star1" title="text">1 star</label>
+                                        <label for="star5" title2="text">5 stars</label>
+                                        <label for="star4" title2="text">4 stars</label>
+                                        <label for="star3" title2="text">3 stars</label>
+                                        <label for="star2" title2="text">2 stars</label>
+                                        <label for="star1" title2="text">1 star</label>
                                         
                                       </div>
                                       
@@ -100,7 +102,7 @@
                               </div>
 
                               <div class="wishitemleft d-flex flex-column">
-                                <div class="title">
+                                <div class="title2">
                                   <a>Learn Guitar In 30 Days by Musician XYZ </a>
                                 </div>
 
@@ -110,11 +112,11 @@
 
                                 <div class="rating">
                                   <div class="rate pt-1">
-                                      <label for="star5" title="text">5 stars</label>
-                                      <label for="star4" title="text">4 stars</label>
-                                      <label for="star3" title="text">3 stars</label>
-                                      <label for="star2" title="text">2 stars</label>
-                                      <label for="star1" title="text">1 star</label>
+                                      <label for="star5" title2="text">5 stars</label>
+                                      <label for="star4" title2="text">4 stars</label>
+                                      <label for="star3" title2="text">3 stars</label>
+                                      <label for="star2" title2="text">2 stars</label>
+                                      <label for="star1" title2="text">1 star</label>
                                       
                                     </div>
                                     
@@ -140,7 +142,7 @@
                                 </div>
 
                                 <div class="wishitemleft d-flex flex-column">
-                                  <div class="title">
+                                  <div class="title2">
                                     <a>Learn Guitar In 30 Days by Musician XYZ </a>
                                   </div>
 
@@ -150,11 +152,11 @@
 
                                   <div class="rating">
                                     <div class="rate pt-1">
-                                        <label for="star5" title="text">5 stars</label>
-                                        <label for="star4" title="text">4 stars</label>
-                                        <label for="star3" title="text">3 stars</label>
-                                        <label for="star2" title="text">2 stars</label>
-                                        <label for="star1" title="text">1 star</label>
+                                        <label for="star5" title2="text">5 stars</label>
+                                        <label for="star4" title2="text">4 stars</label>
+                                        <label for="star3" title2="text">3 stars</label>
+                                        <label for="star2" title2="text">2 stars</label>
+                                        <label for="star1" title2="text">1 star</label>
                                         
                                       </div>
                                       
@@ -180,7 +182,7 @@
         </div>
     </div>
 
-    </div>
+    
     <%- include('footer'); -%>
 
     
@@ -188,6 +190,14 @@
     
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     
-    
+  </div>
 </body>
+<style>
+  .atb{
+color: rgb(192, 186, 178);
+background-color: #181a1b;
+padding: .75rem 1.25rem;
+}
+
+</style>
 </html>
