--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -8,16 +8,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@400;600&family=PT+Sans&family=Shadows+Into+Light&family=Ubuntu:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Lobster&family=Montserrat:ital,wght@1,100&family=Oswald:wght@300;400&family=Oxygen:wght@300;700&family=Prompt:wght@600&family=Quicksand:wght@300&family=Righteous&family=Secular+One&family=Tilt+Prism&display=swap" rel="stylesheet">
+   
     <style>
+        
         .faq{
+            background-color: black;
             margin: 0px;
             padding: 20px 200px 30px 200px;
         }
         p{
+            color: white;
             font-size: 20px;
+            font-family: 'Quicksand', sans-serif;
         }
         h1{
-            font-family: 'Edu NSW ACT Foundation', cursive;
+            color: white;
+            font-family: 'Quicksand', sans-serif;
         }
         big{
             font-size: 30px;
