--- a/public/css/instructor.css
+++ b/public/css/instructor.css
@@ -1,113 +1,78 @@
-.bggg{
-    height: 2300px; 
-   /* background-image: linear-gradient(to right, #DECBA4, #3E5151); */
-
-   /* background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898;
-background-blend-mode: multiply,multiply; */
-
-background: linear-gradient(to bottom, #D5DEE7 0%, #E8EBF2 50%, #E2E7ED 100%), linear-gradient(to bottom, rgba(0,0,0,0.02) 50%, rgba(255,255,255,0.02) 61%, rgba(0,0,0,0.02) 73%), linear-gradient(33deg, rgba(255,255,255,0.20) 0%, rgba(0,0,0,0.20) 100%);
-background-blend-mode: normal,color-burn;
-}
-.bg1{
-   margin: 10px 0px;
-   display: flex;
-  
-   align-content: center;
-   height: 200px;
-   
-   /* transform: perspective(700px) translate3d(0px, 0px, 50px); */
-   border-radius: 40px;
-}
-.bg2{
-    /* display: flex; */
-   font-size: 20px;
-}
-img{
-   transform: perspective(700px) translate3d(0px, 0px, 70px);
-   padding: 20px;
-   width: 100px;
-   height: 80px;
-   border-radius: 50%;
-}
-.but{
-    cursor: pointer;
-    position: relative;
-   width: 250px;
-   height: 50px;
-   border: 1px solid black;
-   border-radius: 40px;
-   background: #7d2ae8;
-   color: #fff;
-   font-size: 18px;
-   font-weight: 400;
-   transition: transform 0.2s ease;
-   box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+#col1{
+    padding: 10px;
 }
 
-.but:active{
-    transform: scale(0.96);
+
+.video_box{
+    /* background-color: black; */
+}
+.video-part{
+    background-color: #4c535dc2;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
-.but::before,
-.but::after{
-    content:"";
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 100%;
-    width: 150%;
-   z-index: -1;
-    background-repeat: no-repeat;
+#home-video{
+
+     /* width:700px;  
+     height: 800px;  */
+     /* padding: 20px;  */
+ 
 }
 
-.but.animate::before{
-    top: -70%;
-    background-image: radial-gradient(circle,#7d2ae8 20%, transparent 20%),
-    radial-gradient(circle, transparent 20%, #7d2ae8 20%, transparent 30%),
-    radial-gradient(circle,#7d2ae8 20%, transparent 20%),
-    radial-gradient(circle, transparent 10%, #7d2ae8 15%, transparent 20%),
-    radial-gradient(circle,#7d2ae8 20%, transparent 20%),
-    radial-gradient(circle,#7d2ae8 20%, transparent 20%),
-    radial-gradient(circle,#7d2ae8 20%, transparent 20%),
-    radial-gradient(circle,#7d2ae8 20%, transparent 20%);
-    background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%, 18% 18%;
-    background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
-    animation: topBubbles 0.6s ease-in-out forwards;
-
-}
-
-@keyframes topBubbles {
-    50%{
-        background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
-    }
-    100%{
-        background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
-        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
-    }
-}
-
-.but.animate::after{
-    bottom: -70%;
-    background-image: radial-gradient(circle,#7d2ae8 20%, transparent 20%),
-    radial-gradient(circle, transparent 10%, #7d2ae8 15%, transparent 20%),
-    radial-gradient(circle,#7d2ae8 20%, transparent 20%),
-    radial-gradient(circle,#7d2ae8 20%, transparent 20%),
-    radial-gradient(circle,#7d2ae8 20%, transparent 20%),
-    radial-gradient(circle,#7d2ae8 20%, transparent 20%),
-    radial-gradient(circle,#7d2ae8 20%, transparent 20%);
-
-    background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 20% 20%, 18% 18%;
-    background-position: 10% 0%, 30% 10%, 55% 0%, 70% 0%, 85% 0%, 70% 0%, 70% 0%;
-    animation: bottomBubbles 0.6s ease-in-out forwards;
+.our-team{
     
+    /* display: inline-block; */
+    text-align: center;
+    margin-top: 80px;
+    font-family: 'Archivo Black', sans-serif;
+    /* padding: 20px; */
 }
 
-@keyframes bottomBubbles {
-    50%{
-        background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
-    }
-    100%{
-        background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%;
-        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
-    }
+
+
+.our-team-header{
+    font-size: 50px;
+    color: white;
+    font-weight: bolder;
+}
+
+.our-team-content{
+    font-family: 'Quicksand', sans-serif;
+    font-weight: lighter;
+    color: white;
+    font-size: 18px;
+}
+
+
+
+.course-heading{
+    color: white;
+    font-weight: bolder;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 30px;
+    padding: 20px;
+    margin-left: 135px;
+
+}
+
+.inst-grid{
+   
+}
+
+.card-prop{
+    /* padding: 10px; */
+    margin: 10px;
+    background-color: rgba(53, 53, 53, 0.777);
+}
+
+
+#home-video{
+
+    width:480px;  
+    height: 560px; 
+    /* padding: 20px;  */
+
 }
