--- a/public/css/header.css
+++ b/public/css/header.css
@@ -13,7 +13,7 @@
     color:  #00fff2a8 ;
     margin-right: 30px;
     font-size: 17px;
-    font-family: 'Shadows Into Light', cursive;
+    font-family: 'Bruno Ace', cursive;
     text-shadow: 10px 10px 25px #00fff2;
     transition: .3s ease;
     cursor: text;
@@ -33,7 +33,7 @@
 
 }
 
-.spefic .navbar ul {
+.specific .navbar ul {
     overflow: auto;
 
 }
@@ -54,10 +54,10 @@
 
 
 .specific .navbar li a {
-    font-size: 15px;
+    font-size: 12px;
     color: rgba(211, 211, 214, 0.856);
     padding: 5px 5px;
-    font-family: 'Cabin', sans-serif;
+    font-family: 'Bruno Ace', cursive;
     text-decoration: none;
     transition: .3s ease;
     cursor: pointer;
@@ -65,7 +65,7 @@
 
 .specific .navbar li a:hover {
     color: rgba(118, 211, 232, 0.864);
-    font-size: 16px;
+    font-size: 13px;
     /* background-color: rgba(0, 0, 0, 0.471); */
     border-radius: 15px;
     transform:scale(1.1);
@@ -79,16 +79,16 @@
                           1px 1px 0 #0a6cddae,
                          1px -1px 0 #0a6cddae,
                         -1px -1px 0 #0a6cddae; */
-    color: rgba(254, 205, 57, 0.967);
-    padding: 5px;
-    margin: 5px;
-    /* margin-left: 1000px; */
-    font-family: 'Shadows Into Light', cursive;
-    text-shadow: 10px 10px 25px #00fff2;
-    font-size: 47px;
-    font-style: normal;
-    font-variant: normal;
-    line-height: 44px;
+                        color: rgba(254, 57, 57, 0.967);
+                        padding: 5px;
+                        margin: 5px;
+                        /* margin-left: 1000px; */
+                        font-family: 'Bruno Ace', cursive;
+                        text-shadow: 10px 10px 25px #ffffff7b;
+                        font-size: 47px;
+                        font-style: normal;
+                        font-variant: normal;
+                        line-height: 44px;
 
 
 }
