--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,6 +19,7 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&family=Special+Elite&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap" rel="stylesheet">
 
     </head>
     <body>
@@ -34,6 +35,7 @@
                 <p class="preheader-text">Master your music skills with the best music lessons!</p>
             </div>
         </div>
+
         <div class="specific">
         <header>
             <nav class="navbar">
