--- a/views/catalogue.ejs
+++ b/views/catalogue.ejs
@@ -223,8 +223,10 @@
           <div class="song-lesson-vid">
             <div class="our-team-header" style="color: black; text-align:center; padding:5px;">SONG LESSONS</div>
             <div class = "s-l-vid">
+              <center>
               <video style="height: 500px; width:900px;" id="home-video" src="images/song-lesson-vid.mp4" type="video/mp4" controls></video>
-          </div>
+            </center>
+            </div>
           </div>
 
 
