--- a/views/header.ejs
+++ b/views/header.ejs
@@ -39,16 +39,20 @@
         <div class="specific">
         <header>
             <nav class="navbar">
-                <ul>
+                <ul><li><a href="/login">SIGNIN</a></li>
+                    <li><a href="#">|</a></li>
+                    <li><a href="/register">SIGNUP</a></li>
+                    <li>        </li>
+                    <li></li>
+                    <li><a href="/spotlight">SPOTLIGHT</a></li>
                     <li><a href="/wishlist">WISHLIST</a></li>
-                    <li><a href="#">SPOTLIGHT</a></li>
                     <li><a href="/instructor">OUR INSTRUCTORS</a></li>
                     <li><a href="/faq">FAQs</a></li>
                     <li><a href="/contactus">CONTACT US</a></li>
-                    <li><a href="/login">LOGIN</a></li>
+                    
                     <li><a href="/catalogue">CATALOGUE</a></li>
                     <li><a href="/">HOME</a></li>
-                    <li><a href="#"><img src="images/guitariconnav.png" class="icon" width="64" height="64"></a></li>
+                    <li><a href="/"><img src="images/guitariconnav.png" class="icon" width="64" height="64"></a></li>
 
 
                 </ul>
