--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -22,6 +22,9 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&family=Special+Elite&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap" rel="stylesheet">
 
 </head>
 
@@ -42,16 +45,19 @@
     <div class="bg">
         <header>
             <nav class="navbar">
-                <ul>
-                    <li><a href="/wishlist">WISHLIST</a></li>
+                <ul><li><a href="/login">SIGNIN</a></li>
+                    <li><a href="#">|</a></li>
+                    <li><a href="/register">SIGNUP</a></li>
+                    <li>         </li>
+                    <li></li>
                     <li><a href="/spotlight">SPOTLIGHT</a></li>
+                    <li><a href="/wishlist">WISHLIST</a></li>
                     <li><a href="/instructor">OUR INSTRUCTORS</a></li>
                     <li><a href="/faq">FAQs</a></li>
                     <li><a href="/contactus">CONTACT US</a></li>
-                    <li><a href="/login">LOGIN</a></li>
                     <li><a href="/catalogue">CATALOGUE</a></li>
                     <li><a href="/">HOME</a></li>
-                    <li><a href="#"><img src="images/guitariconnav.png" class="icon" width="64" height="64"></a></li>
+                    <li><a href="/"><img src="images/guitariconnav.png" class="icon" width="64" height="64"></a></li>
 
 
                 </ul>
