--- a/views/catalogue.ejs
+++ b/views/catalogue.ejs
@@ -13,6 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Shadows+Into+Light&family=Special+Elite&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Lobster&family=Montserrat:ital,wght@1,100&family=Oswald:wght@300;400&family=Oxygen:wght@300;700&family=Prompt:wght@600&family=Quicksand:wght@300&family=Righteous&family=Secular+One&family=Tilt+Prism&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap" rel="stylesheet">
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
@@ -66,20 +67,22 @@
   </div>
 
 
-        <nav class="navbar" id="navbar-id" style="background-color: rgba(37, 33, 33, 0.664);">
+  
+        <nav class="navbar" id="navbar-id" style="background-color: rgb(0, 0, 0);">
             <div class="container-fluid">
               <a class="navbar-brand" id="heading">OUR COURSES</a>
               <form class="d-flex" role="search">
-                <input class="form-control me-2" id="seach-box" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" id="seach-box" type="submit">Search</button>
+                <input class="form-control me-2" id="search-box" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" id="search-box" type="submit">Search</button>
               </form>
             </div>
           </nav>
 
+          <div class="courses">
           <div class="beginner">
             <div class="title-seeall">
                 <div class="title">
-            <h1 style="color: rgb(255, 255, 255); font-family:'Quicksand', sand-serif;">BEGINNER</h1>
+            <h1 style="color: rgb(255, 255, 255); font-family: 'Bruno Ace', cursive;">BEGINNER</h1>
         </div>
         <div class="see-all">
             <button onclick="window.location.href = '/beginnercoursedesc' " class="see-all-button">
@@ -91,9 +94,10 @@
             <div class="row row-cols-1 row-cols-md-3 g-4 cards">
                 <div class="col card-pad">
                     <div class="card crd">
-                      <a href="/coursedescpage"><img src="images/getstarted.png" class="card-img-top" alt="..."></a>
+                      <a href="/coursedescpage"><img src="images/getstarted.png" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
                       <div class="card-body">
-                        <h6 class="card-title">Getting Started</h6>
+                        <h6 class="card-title">Beginner Acoustic Guitar</h6>
+                        <h6 class="card-title">By Marty Schwartz</h6>
                         <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
                       </div>
                     </div>
@@ -101,9 +105,10 @@
 
                 <div class="col card-pad">
                   <div class="card crd">
-                    <a href="#"><img src="images/rhytm.png" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="images/beg-strum-pat.jpg" class="card-img-top" style="height: 197px; width: 347px ;" alt="..."></a>
                     <div class="card-body">
-                      <h6 class="card-title">Rhythm Foundations</h6>
+                      <h6 class="card-title">Beginner Acoustic Strumming patterns</h6>
+                      <h6 class="card-title">By Marty Schwartz</h6>
                       <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
                     </div>
                   </div>
@@ -116,7 +121,7 @@
 
             <div class="title-seeall">
                 <div class="title">
-            <h1 style="color: rgb(255, 255, 255); font-family:'Quicksand', sand-serif;">ROCK</h1>
+            <h1 style="color: rgb(255, 255, 255); font-family: 'Bruno Ace', cursive;">ROCK</h1>
         </div>
         <div class="see-all">
             <button onclick="window.location.href = '/rockcoursedesc'" class="see-all-button">
@@ -128,9 +133,11 @@
             <div class="row row-cols-1 row-cols-md-3 g-4 cards">
                 <div class="col card-pad">
                     <div class="card crd">
-                        <a href="#"><img src="images/rockimpl1.png" class="card-img-top" alt="..."></a>
+                        <a href="#"><img src="images/classic-rock.jpg" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
                       <div class="card-body">
-                        <h6 class="card-title">Rock Improvisation Level 1 - Pentatonic</h6>
+                        <h6 class="card-title">Classic Rock</h6>
+                        <h6 class="card-title">By Marty Schwartz</h6>
+
                         <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
                       </div>
                     </div>
@@ -138,9 +145,11 @@
 
                 <div class="col card-pad">
                   <div class="card crd">
-                    <a href="#"><img src="images/rockimpl2.png" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="images/10-lead-chal.jpg" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
                     <div class="card-body">
-                      <h6 class="card-title">Rock Improvisation Level 2 - Major Keys</h6>
+                      <h6 class="card-title">10 Day Lead guitar Challenge</h6>
+                      <h6 class="card-title">By Andy Gilmour</h6>
+                      
                       <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
                     </div>
                   </div>
@@ -148,35 +157,14 @@
 
                 <div class="col card-pad">
                     <div class="card crd">
-                      <a href="#"><img src="images/rockimpl3.png" class="card-img-top" alt="..."></a>
+                      <a href="#"><img src="images/r-m-g.jpg" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
                       <div class="card-body">
-                        <h6 class="card-title">Rock Improvisation Level 3 - Minor Keys</h6>
+                        <h6 class="card-title">Rock and Metal guitar lessons</h6>
+                        <h6 class="card-title">By Justin Young</h6>
                         <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
                       </div>
                     </div>
                   </div>
-
-                  <div class="col card-pad">
-                    <div class="card crd">
-                      <a href="#"><img src="images/rockimpl4.png" class="card-img-top" alt="..."></a>
-                      <div class="card-body">
-                        <h6 class="card-title">Rock Improvisation Level 4 - Modes</h6>
-                        <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col card-pad">
-                    <div class="card crd">
-                      <a href="#"><img src="images/rockimpl5.png" class="card-img-top" alt="..."></a>
-                      <div class="card-body">
-                        <h6 class="card-title">Rock Improvisation Level 5 - Appregios</h6>
-                        <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
-                      </div>
-                    </div>
-                  </div>
-
-
               </div>
 
           </div>
@@ -184,7 +172,7 @@
           <div class="beginner">
             <div class="title-seeall">
                 <div class="title">
-            <h1 style="color: rgb(255, 255, 255) ; font-family:'Quicksand', sand-serif;">METAL</h1>
+            <h1 style="color: rgb(255, 255, 255) ; font-family: 'Bruno Ace', cursive;">METAL</h1>
         </div>
         <div class="see-all">
             <button class="see-all-button">
@@ -196,19 +184,33 @@
             <div class="row row-cols-1 row-cols-md-3 g-4 cards">
                 <div class="col card-pad">
                     <div class="card crd">
-                      <a href="#"><img src="images/metalimpl1.png" class="card-img-top" alt="..."></a>
+                      <a href="#"><img src="images/ez-metal.jpg" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
                       <div class="card-body">
-                        <h6 class="card-title">Metal Improvisation Level 1</h6>
+                        <h6 class="card-title">Easy Metal Songs</h6>
+                        <h6 class="card-title">By Carl Brown</h6>
                         <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
                       </div>
                     </div>
                   </div>
 
+                  <div class="col card-pad">
+                    <div class="card crd">
+                      <a href="#"><img src="images/fam-solos.jpg" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
+                      <div class="card-body">
+                        <h6 class="card-title">Famous Solos</h6>
+                        <h6 class="card-title">By Carl Brown</h6>
+                        <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
+                      </div>
+                    </div>
+                  </div>
+
+
                 <div class="col card-pad">
                   <div class="card crd">
-                    <a href="#"><img src="images/metalimpl2.png" class="card-img-top" alt="..."></a>
+                    <a href="#"><img src="images/metalimpl2.png" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <h6 class="card-title">Metal Improvisation Level 2</h6>
+                      <h6 class="card-title">By Carl Brown</h6>
                       <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
                     </div>
                   </div>
@@ -216,6 +218,43 @@
               </div>
           </div>
           <br>
+          <div class="beginner">
+            <div class="title-seeall">
+                <div class="title">
+            <h1 style="color: rgb(255, 255, 255); font-family: 'Bruno Ace', cursive;">BLUES</h1>
+        </div>
+        <div class="see-all">
+            <button onclick="window.location.href = '/beginnercoursedesc' " class="see-all-button">
+                <div class = "see-all-txt">See All</div>
+                <img src="images/seemore.png">
+            </button>
+        </div>
+        </div>
+            <div class="row row-cols-1 row-cols-md-3 g-4 cards">
+                <div class="col card-pad">
+                    <div class="card crd">
+                      <a href="/coursedescpage"><img src="images/acoustic-blues.jpg" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
+                      <div class="card-body">
+                        <h6 class="card-title">Acoustic Blues</h6>
+                        <h6 class="card-title">By Marty Schwartz</h6>
+                        <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
+                      </div>
+                    </div>
+                  </div>
+
+                <div class="col card-pad">
+                  <div class="card crd">
+                    <a href="#"><img src="images/blues-solos.jpg" class="card-img-top" style="height: 197px; width: 347px ;" alt="..."></a>
+                    <div class="card-body">
+                      <h6 class="card-title">Blues Solos</h6>
+                      <h6 class="card-title">By Justin Young</h6>
+                      <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+        </div>
           <br>
 
 
@@ -237,6 +276,8 @@
           </div>
 
           
+          <br>
+          <br>
 
           <%- include('footer'); -%>
 
