--- a/public/css/catalogue.css
+++ b/public/css/catalogue.css
@@ -48,12 +48,22 @@ head-slides{
 }
 
 
+.courses{
+    background-color: rgb(34, 34, 34);
+    padding-bottom: 10px;
+}
+
+
 #heading{
     color: white;
+    font-family: 'Bruno Ace', cursive;
 }
 
 #search-box{
-    border-radius: 50px;
+    font-size: 13px;
+    border-radius: 5px;
+    font-family: 'Bruno Ace', cursive;
+    color: aqua;
 }
 
 #navbar-id{
@@ -77,7 +87,7 @@ head-slides{
 }
 
 .see-all-button{
-    background-color: black;
+    background-color: rgb(34, 34, 34);
     color: white;
     border: 0px;
     font-family: 'Quicksand', sans-serif;
@@ -133,3 +143,4 @@ hr{
 .song-lessons{
     background-color: #2b5476bf;
 }
+
