--- a/views/instructor.ejs
+++ b/views/instructor.ejs
@@ -22,7 +22,7 @@
         <div class="video-part">
           <div class="our-team">
               <h1 class="our-team-header">LEARN FROM THE <div style="color: aqua;">BEST GUITAR INSTRUCTORS</div></h1>
-              <p class="our-team-content">If you’re gonna take guitar lessons, why not learn from the best? At JamPlay, you can learn</p>
+              <p class="our-team-content">If you’re gonna take guitar lessons, why not learn from the best? At Masters Of Music, you can learn</p>
               <p class="our-team-content">guitar from the best players and the best instructors! Our roster includes a Grammy Award</p>
               <p class="our-team-content">winner, a Country Music Hall of Famer, the National Flatpicking Champion, dozens of</p>
               <p class="our-team-content">professional touring musicians and many more lifelong educators.</p>
