--- a/public/css/wishlist.css
+++ b/public/css/wishlist.css
@@ -37,7 +37,7 @@ margin-top: 0.8rem;
 
 
 .rightpanel{
-    width: 74%;
+    width: 76%;
     min-width: 820px;
     background-color: #0f0707;
     border: none;
@@ -64,7 +64,7 @@ font-weight: 500;
 border-radius: 0.6rem;
 border: 2px solid #e0e0e0;
 background-color: #181a1b;
-margin-bottom: 1rem;
+margin-bottom: 1.6rem;
 }
 
 .wishblock{
@@ -75,7 +75,7 @@ margin-bottom: 1rem;
     border-radius: 1rem;
     height: 180px;
     background-color: #181a1b;
-    margin-bottom: 0.8rem;
+    margin-bottom: 1.2rem;
 }
 
 .wishitemleft{
@@ -95,6 +95,15 @@ margin-bottom: 1rem;
           white-space: nowrap;
 }
 
+.nothinginwish{
+    font-size:xx-large;
+    color: rgb(192, 186, 178);
+    display: flex;
+    align-self: center;
+    padding: 3rem;
+    margin-top: 3rem;
+
+}
 .teacher{
     font-size: 14px;
     opacity: 0.7;
@@ -110,7 +119,17 @@ margin-bottom: 1rem;
     height: 26px;
    
 }
+.atb a{
 
+    color: inherit;
+    text-decoration: inherit;
+    transition: ease-in;
+    
+}
+.atb a:hover{
+ color: #2262c8;
+ font-size: 17px;
+}
 .rate:not(:checked) > label {
     float:right;
     width:1em;
@@ -135,8 +154,10 @@ margin-bottom: 1rem;
     margin-right: 4rem;
     margin-left: auto;
     align-self: flex-end;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
-
 .buy-now {
     background-color: #000000;
     border: 1px solid;
@@ -152,10 +173,15 @@ margin-bottom: 1rem;
     text-decoration: none #6B7280 solid;
     transition-duration: .2s;
     transition-property: background-color,border-color,color,fill,stroke;
-    transition-timing-function: cubic-bezier(.4, 0, 0.2, 1);
+    
     touch-action: manipulation;
     width: auto;
+    position: relative;
+    display: inline-block;
+    alignalitems: flex-end;
+    margin-top: auto;
   }
+
   
   .buy-now:hover {
     background-color: #374151;
@@ -199,6 +225,22 @@ margin-bottom: 1rem;
     transition: color 0.3s ease;
     letter-spacing: 0.0625rem;
     
+}
+
+.delicon{
+    display: inline-block;
+    width: 20px;
+    align-items: center;
+    align-self: center;
+    margin-top: 10px;
+    align-self: end;
+    margin-right: 0.8rem;
+    scale: 1.5;
+    
+}
+.delicon:hover{
+    scale: 1.8;
+    cursor: pointer;
 }
 
 .userpic{ 
