--- a/views/wishlist.ejs
+++ b/views/wishlist.ejs
@@ -37,7 +37,7 @@
                               <li class="list-group-item atb" style="border-bottom: 2px solid grey;  background-color: #181a1b;">Your Courses</li>
                               <li class="list-group-item atb" style="border-bottom: 2px solid grey;  background-color: #181a1b;"><a href = "/">Home</a></li>
                               
-                              <li class="atb list-group-item" style="border-bottom: 2px solid grey;  background-color: #181a1b;"><a href = "/logout" id = "logoutbtn">Log Out</a></li>
+                              <li class="atb list-group-item" style="border-bottom: 2px solid grey;  background-color: #181a1b;"><a href = "/logout" id = "logoutbtn" class = "logout-button">Log Out</a></li>
                             </ul>
 
                             
