--- a/public/css/homestyle.css
+++ b/public/css/homestyle.css
@@ -17,12 +17,12 @@
                           1px 1px 0 #0a6cddae,
                          1px -1px 0 #0a6cddae,
                         -1px -1px 0 #0a6cddae; */
-    color: rgba(254, 205, 57, 0.967);
+    color: rgba(254, 57, 57, 0.967);
     padding: 5px;
     margin: 5px;
     /* margin-left: 1000px; */
-    font-family: 'Shadows Into Light', cursive;
-    text-shadow: 10px 10px 25px #00fff2;
+    font-family: 'Bruno Ace', cursive;
+    text-shadow: 10px 10px 25px #ffffff7b;
     font-size: 47px;
     font-style: normal;
     font-variant: normal;
@@ -37,7 +37,7 @@
     color:  #00fff2a8 ;
     margin-right: 30px;
     font-size: 17px;
-    font-family: 'Shadows Into Light', cursive;
+    font-family: 'Bruno Ace', cursive;
     text-shadow: 10px 10px 25px #00fff2;
     transition: .3s ease;
     cursor: text;
@@ -72,10 +72,10 @@
 }
 
 .navbar li a {
-    font-size: 15px;
+    font-size: 12px;
     color: rgba(211, 211, 214, 0.856);
     padding: 5px 5px;
-    font-family: 'Cabin', sans-serif;
+    font-family: 'Bruno Ace', cursive;
     text-decoration: none;
     transition: .3s ease;
     cursor: pointer;
@@ -83,7 +83,7 @@
 
 .navbar li a:hover {
     color: rgba(118, 211, 232, 0.864);
-    font-size: 16px;
+    font-size: 13px;
     /* background-color: rgba(0, 0, 0, 0.471); */
     border-radius: 15px;
     transform:scale(1.1);
@@ -109,8 +109,8 @@
     padding-top: 20px;
     text-align: center;
     /* margin-right: 50px; */
-    color: rgb(195, 225, 244);
-    font-family: 'Prompt', sans-serif;
+    color: rgb(144, 204, 241);
+    font-family: 'Bruno Ace', cursive;
     font-size: 35px;
 }
 
@@ -122,10 +122,10 @@
         -1px -1px 0 #2928281d;
     text-align: center;
     /* margin-right: 25px; */
-    color: rgb(123, 195, 240);
+    color: rgb(208, 59, 59);
     /* margin-left: 150px; */
     padding: 15px;
-    font-family: 'Prompt', sans-serif;
+    font-family: 'Bruno Ace', cursive;
     font-size: 20px;
 
 }
