--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/register.css">
     <title>Document</title>
 </head>
 
-<body>
+<body style="background-color: black;">
 
     <%- include('header'); -%>
 
@@ -30,6 +30,7 @@
 
 
 
+        <div class="bg-pic"> 
             <div class="container register mb-5">
                 <div class="row">
 
@@ -88,7 +89,7 @@
 
 
                                     <div>
-                                        <button type="submit" class="btnRegister" id="btn">Register</button>
+                                        <button type="submit" class="btnRegister" id="btn"><div class="reg-button">Register</div></button>
                                         <a href="login" class="down">Already have an account?</a>
                                     </div>
                                 </div>
@@ -97,23 +98,21 @@
                         </form>
                         <!-- </div>
 
+
                 </div> -->
                     </div>
-                    <div class="col-md-4 register ">
-                        <img src="images/signup1.jpg" class="icon rotate linear infinite" alt="image" />
-
-                        <!-- <div class="text-center quotes">
-
-                </div> -->
-                        <div id="container">
-                            <span id="text1"></span>
-                            <span id="text2"></span>
+                    <div class="col-md-4 register container-2">
+                        <img src="images/signup1.jpg" class="icon-2" alt="image" />
+                        <div class="centered">
+                            <div>Register Now</div>
+                        <div>to begin</div>
+                        <div>Your Music Journey</div>
                         </div>
-
                     </div>
                 </div>
 
             </div>
+        </div>
 
             <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
                 integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
