minor wishlist change

--- a/views/wishlist.ejs
+++ b/views/wishlist.ejs
@@ -94,7 +94,7 @@
 
                                 <div class="rightitembar">
                                     <i class="bi bi-trash delicon" id = 'delete1'></i>
-                                    <button class="buy-now" onclick="window.location.href = '/checkout' ">Buy Now</button>
+                                    <button class="buy-now" onclick="window.location.href = '/checkout/<%=user.wishlist[i]._id %>' ">Buy Now</button>
 
                                 </div>
                             </div>
